--- a/public/landing-preview/css/preview-style.css
+++ b/public/landing-preview/css/preview-style.css
@@ -1,6 +1,6 @@
-=[ Custom Preview Styles]=*/ header {
+ header {
   position: relative;
-  padding: 180px 0 0;
+  padding: 90px 0 0;
   overflow: hidden;
 }
 
@@ -137,7 +137,7 @@ main {
 /* = [ Custom Preview Styles  ] = */
 header {
   position: relative;
-  padding: 180px 0 0;
+  padding: 50px 0 0!;
   overflow: hidden;
 }
 
